Add some HTML structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+< ! DOCTYPE html>
+<html>
+<head>
+<title></title>
+<head/>
+<body>
 group 1 homework
 <h1>group 1 homework</h1>
-
+<h3>Tayyaba, Joe, Jazmin, Durran</h3>
+<p>This is our group homework</p>
+</body>
+</html>
