--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ group 1 homework
 <h1>group 1 homework</h1>
 <h3>Tayyaba, Joe, Jazmin, Durran</h3>
 <p>This is our group homework</p>
+<p>content</p>
+<img src="/Users/pearlinebrooks/repos/website/images/Jerry.jpg" alt="Rat">
 </body>
 </html>
