Add a link to the About page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 group 1 homework
 <h1>group 1 homework</h1>
+<a href="about.html">About our homework</a>
 <h3>Tayyaba, Joe, Jazmin, Durran</h3>
 <p>This is our group homework</p>
 <p>content</p>
